rust/codec-pmc/tests/snapshots/examples__PMC11518443.html.json.snap
---
source: rust/codec-pmc/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "doi": "10.1093/eurpub/ckae144.662",
  "abstract": [
    {
      "type": "Section",
      "sectionType": "Background",
      "content": [
        {
          "type": "Heading",
          "level": 2,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Background"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "The intense childrearing years often coincide with the heightened work demands and responsibilities of the career-building years. We aimed to evaluate the association between family-life stage and men’s and women’s experience of work and private demands, and the conflict between these demands."
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Section",
      "sectionType": "Methods",
      "content": [
        {
          "type": "Heading",
          "level": 2,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Methods"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "We evaluated 3532 mothers and 731 fathers as part of the Portuguese population-based birth cohort Generation XXI (2018-2020). Data on family-life stage (exposure), work demands, private demands, and work-to-family conflict (outcomes) were retrieved at the 13-year follow-up wave, as well as data on sociodemographic and household characteristics. Family-life stage was operationalized according to the age of the youngest child: stage 1 (≤5 years), stage 2 (6-11 years), and stage 3 (≥12 years). Ordinal logistic regression models were used to estimate associations."
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Section",
      "sectionType": "Results",
      "content": [
        {
          "type": "Heading",
          "level": 2,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Results"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Men reported more frequently long working hours, while women spent more time on household and child-related tasks. After adjustment for parents’ and household characteristics, mothers and fathers with younger children were more likely to report spending more time on child-related tasks (ORmothers = 1.83; 95%CI 1.44, 2.33; ORfathers = 2.36; 95%CI 1.41, 3.94), compared to those with older children. Fathers with younger children were also more likely to report spending more time on household tasks (OR = 2.20; 95%CI 1.30, 3.73 for routine tasks and OR = 1.75; 95%CI 1.03, 2.97 for sporadic tasks). Mothers exhibited a significant association between family-life stage and time-based work-to-family conflict when they had younger children (OR = 1.24; 95% CI 1.05, 1.47 for family-life stage 2 and OR = 1.28; 95% CI 1.00, 1.63 for family-life stage 1)."
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Section",
      "sectionType": "Conclusions",
      "content": [
        {
          "type": "Heading",
          "level": 2,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Conclusions"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Both fathers and mothers with young children experienced increased private demands, but only mothers experienced work-to-family conflict. This reveals that family and working arrangements remain marked by a gendered pattern against women."
              }
            }
          ]
        }
      ]
    }
  ],
  "authors": [
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "EPI Unit, Institute of Public Health of the Porto University, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "ITR, University of Porto, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "Department of Medicine, Faculty of Medicine of the Porto University, Porto, Portugal"
        }
      ],
      "familyNames": [
        "Amaro"
      ],
      "givenNames": [
        "J"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "EPI Unit, Institute of Public Health of the Porto University, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "ITR, University of Porto, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "ICBAS, University of Porto, Porto, Portugal"
        }
      ],
      "familyNames": [
        "Lucas"
      ],
      "givenNames": [
        "R"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "Comprehensive Health Research Center, NOVA University Lisbon, Lisbon, Portugal"
        },
        {
          "type": "Organization",
          "name": "Nova National School of Public Health, NOVA University Lisbon, Lisbon, Portugal"
        }
      ],
      "familyNames": [
        "Perelman"
      ],
      "givenNames": [
        "J"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "EPI Unit, Institute of Public Health of the Porto University, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "ITR, University of Porto, Porto, Portugal"
        }
      ],
      "familyNames": [
        "Fraga"
      ],
      "givenNames": [
        "S"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "EPI Unit, Institute of Public Health of the Porto University, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "ITR, University of Porto, Porto, Portugal"
        }
      ],
      "familyNames": [
        "Maia"
      ],
      "givenNames": [
        "S"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "Centro Investigação em Antropologia Saúde, Coimbra University, Coimbra, Portugal"
        }
      ],
      "familyNames": [
        "Pereira"
      ],
      "givenNames": [
        "M"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "PANSOC, Oslo Metropolitan University, Oslo, Norway"
        }
      ],
      "familyNames": [
        "Mamelund"
      ],
      "givenNames": [
        "S",
        "E"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "Faculty of Psychology and Educational Science, University of Porto, Porto, Portugal"
        }
      ],
      "familyNames": [
        "Matias"
      ],
      "givenNames": [
        "M"
      ]
    },
    {
      "type": "Person",
      "affiliations": [
        {
          "type": "Organization",
          "name": "EPI Unit, Institute of Public Health of the Porto University, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "ITR, University of Porto, Porto, Portugal"
        },
        {
          "type": "Organization",
          "name": "Public Health Forensic Sciences Department, Faculty of Medicine of the Porto University, Porto, Portugal"
        }
      ],
      "familyNames": [
        "Leão"
      ],
      "givenNames": [
        "T"
      ]
    }
  ],
  "datePublished": {
    "type": "DateTime",
    "value": "2024 Oct 28"
  },
  "title": [
    {
      "type": "Text",
      "value": {
        "string": "Differences in the work-family experience of mothers and fathers of a southern European country"
      }
    }
  ],
  "content": [],
  "identifiers": [
    {
      "type": "PropertyValue",
      "propertyId": "pmc",
      "value": "11518443"
    }
  ],
  "isPartOf": {
    "type": "PublicationIssue",
    "isPartOf": {
      "type": "PublicationVolume",
      "isPartOf": {
        "type": "Periodical",
        "name": "The European Journal of Public Health"
      },
      "volumeNumber": 34
    },
    "issueNumber": "Suppl 3"
  },
  "pageStart": "ckae144.662"
}
