rust/codec-pmc/tests/snapshots/examples__PMC11518443.tar.decode.losses.snap
---
source: rust/codec-pmc/tests/examples.rs
expression: info.losses
---
//article/front/article-meta/article-categories/subj-group/subj-group/@subj-group-type: 1
//article/front/article-meta/author-notes: 1
//article/front/article-meta/counts/page-count: 1
//article/processing-meta: 1
