rust/codec-pmc/tests/snapshots/examples__PMC12419688.tar.decode.losses.snap
---
source: rust/codec-pmc/tests/examples.rs
expression: info.losses
---
//article/back/ref-list/@id: 1
//article/back/ref-list/ref/mixed-citation/person-group/etal: 2
//article/back/ref-list/title: 1
//article/back/sec/list/list-item/p/ext-link/@specific-use: 3
//article/body/fig/@fig-type: 1
//article/body/fig/@position: 1
//article/body/fig/graphic/@position: 1
//article/body/fig/p/italic/@toggle: 3
//article/body/p/italic/@toggle: 18
//article/body/sec/title/italic/@toggle: 1
//article/front/article-meta/author-notes: 1
//article/front/article-meta/counts/page-count: 1
//article/processing-meta: 1
